# 2025-12-01-python-claude-beads

./: .gitignore  README.md  pyproject.toml
.beads/: issues.jsonl
src/brazilian_soccer_mcp/: __init__.py  data_loader.py  database.py  kaggle_loader.py  models.py  server.py
tests/: __init__.py  conftest.py  test_analysis.py  test_integration.py  test_kaggle_integration.py  test_match_queries.py  test_player_search.py  test_team_operations.py
tests/features/: analysis.feature  match_queries.feature  player_search.feature  team_operations.feature
