[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brazilian-soccer-mcp"
version = "0.1.0"
description = "MCP Knowledge Graph for Brazilian Soccer"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "neo4j>=5.0.0",
    "pandas>=2.0.0",
    "pytest>=8.0.0",
    "pytest-bdd>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
bdd_features_base_dir = "tests/features"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["src/brazilian_soccer_mcp"]
